[package]
name = "oxymcts"
version = "0.1.1"
authors = ["Samuel Batissou <samuelbatissou@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Library for general traits and default implementations for Monte Carlo Tree Search"
license = "MIT"
repository = "https://github.com/sagebati/oxymcts"
keywords = ["mcts", "learning", "monte", "carlo", "tree"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ego-tree = "0.6.2"
num-traits = "0.2.15"
rand = "0.8.5"
noisy_float = "0.2.0"
ascii_tree = { version = "0.1.1", optional = true }

[features]
default = ["ascii-tree"]
ascii-tree = ["ascii_tree"]

[dev-dependencies]
rayon = "1.5.3"
